images changes, added whatsapp from daia

--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@ document.addEventListener("DOMContentLoaded", function () {
           <div class="col-lg-8">
             <div class="hero-image-container" data-aos="zoom-in" data-aos-delay="400">
               <div class="hero-image">
-                <img src="assets/img/about/about-15.webp" alt="Business Innovation" class="img-fluid">
-                <div class="image-decoration"></div>
+                <img src="assets/img/daia1.jpg" alt="Business Innovation" class="img-fluid">
+                <!-- <div class="image-decoration"></div> -->
               </div>
             </div>
           </div>
@@ -233,10 +233,10 @@ document.addEventListener("DOMContentLoaded", function () {
           <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="200">
             <div class="image-wrapper">
               <div class="image-box">
-                <img src="assets/img/about/about-square-15.webp" class="img-fluid" alt="About Image" loading="lazy">
+                <img src="assets/img/daia0.jpg" class="img-fluid" alt="About Image" loading="lazy">
               </div>
               <div class="experience-box" data-aos="zoom-in" data-aos-delay="300">
-                <div class="years">15+</div>
+                <div class="years">20+</div>
                 <div class="text">Years of<br>Experience</div>
               </div>
             </div>
@@ -284,7 +284,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
               <div class="cta-buttons">
                <!-- <a href="#" class="btn-learn-more">Learn More</a> -->
-                <a href="https://wa.me/5491112345678?text=Hola!%20Quiero%20saber%20más%20sobre%20sus%20servicios" 
+                <a href="https://wa.me/5492635009032" 
                    target="_blank" 
                    class="btn-get-started">
                    Quiero saber más
@@ -348,7 +348,7 @@ document.addEventListener("DOMContentLoaded", function () {
                   <span class="service-number">02</span>
                   <h3 class="service-title">Ganá Velocidad</h3>
                   <p class="service-text">Hacé tus procesos hasta 5 veces más rápidos y optimiza la eficiencia con nuestra ayuda.</p>
-                 <a href="https://wa.me/5491112345678?text=Hola!%20Quiero%20agendar%20mi%20consultoría" 
+                 <a href="https://wa.me/5492635009032" 
                    target="_blank" 
                    class="service-link">
                   Agendá tu Consultoría
@@ -367,7 +367,7 @@ document.addEventListener("DOMContentLoaded", function () {
                   <span class="service-number">03</span>
                   <h3 class="service-title">Optimizá la Eficiencia</h3>
                   <p class="service-text">Proporciona a tu equipo las herramientas para aumentar su productividad y lograr más, gracias a nuestra tecnología.</p>
-                 <a href="https://wa.me/5491112345678?text=Hola!%20Quiero%20agendar%20mi%20consultoría" 
+                 <a href="https://wa.me/5492635009032" 
                    target="_blank" 
                    class="service-link">
                   Agendá tu Consultoría
@@ -386,7 +386,7 @@ document.addEventListener("DOMContentLoaded", function () {
                   <span class="service-number">04</span>
                   <h3 class="service-title">Mejora la Calidad</h3>
                   <p class="service-text">Obtené una producción consistente y de calidad al eliminar errores y asegurar resultados precisos y confiables.</p>
-                  <a href="https://wa.me/5491112345678?text=Hola!%20Quiero%20agendar%20mi%20consultoría" 
+                  <a href="https://wa.me/5492635009032" 
                    target="_blank" 
                    class="service-link">
                   Agendá tu Consultoría
@@ -410,9 +410,11 @@ document.addEventListener("DOMContentLoaded", function () {
                   </div>
                   <div class="col-lg-8">
                     <div class="cta-content text-lg-start" data-aos="fade-left" data-aos-delay="300">
-                      <h3>Need a Custom Solution?</h3>
+                      <h3>¿Necesitas una Solución Personalizada?</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis.</p>
-                      <a href="#" class="primary-btn">Schedule a Consultation</a>
+                      <a href="https://wa.me/5492635009032" target="_blank" class="primary-btn">
+                        Agendar una Consulta
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -541,8 +543,8 @@ document.addEventListener("DOMContentLoaded", function () {
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span class="description-title">Testimonials</span>
-        <h2>Testimonials</h2>
+        <span class="description-title">Testimonios</span>
+        <h2>Testimonios</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
@@ -765,7 +767,7 @@ document.addEventListener("DOMContentLoaded", function () {
                   <img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt="Brand Identity" loading="lazy">
                   <div class="overlay">
                     <div class="overlay-content">
-                     <a href="https://wa.me/549XXXXXXXXX" class="whatsapp-btn" target="_blank">
+                     <a href="https://wa.me/5492635009032" class="whatsapp-btn" target="_blank">
                       Quiero mi bot!
                     </a>
                     </div>
@@ -784,7 +786,7 @@ document.addEventListener("DOMContentLoaded", function () {
                   <img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt="Brand Identity" loading="lazy">
                   <div class="overlay">
                     <div class="overlay-content">
-                     <a href="https://wa.me/549XXXXXXXXX" class="whatsapp-btn" target="_blank">
+                     <a href="https://wa.me/5492635009032" class="whatsapp-btn" target="_blank">
                       Quiero màs info!
                     </a>
                     </div>
@@ -803,7 +805,7 @@ document.addEventListener("DOMContentLoaded", function () {
                   <img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt="Brand Identity" loading="lazy">
                   <div class="overlay">
                     <div class="overlay-content">
-                     <a href="https://wa.me/549XXXXXXXXX" class="whatsapp-btn" target="_blank">
+                     <a href="https://wa.me/5492635009032" class="whatsapp-btn" target="_blank">
                       Quiero mi bot!
                     </a>
                     </div>
