--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
               <div class="hero-btns" data-aos="fade-up" data-aos-delay="300">
                 <a href="https://wa.me/5492635009032" target="_blank" class="btn btn-primary">
-                  Comenzá tu Proyecto
+                  Cotiza tu Proyecto
                 </a>
                 <!--<a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="btn btn-outline glightbox">
                   <i class="bi bi-play-circle"></i>
@@ -239,7 +239,7 @@ document.addEventListener("DOMContentLoaded", function () {
               </div>
               <div class="experience-box" data-aos="zoom-in" data-aos-delay="300">
                 <div class="years">20+</div>
-                <div class="text">Years of<br>Experience</div>
+                <div class="text">Años de<br>Experiencia </div>
               </div>
             </div>
           </div>
@@ -260,7 +260,7 @@ document.addEventListener("DOMContentLoaded", function () {
                     <i class="bi bi-check2-circle"></i>
                   </div>
                   <div class="text">
-                    <h4>Cónocenos</h4>
+                    <h4>Conócenos</h4>
                     <p>En <strong>DaIA</strong> potenciamos la comunicación, ventas y crecimiento de las empresas mediante tecnología. Somos expertos en Agentes de IA, Automatización de Procesos y CRM, con presencia en Argentina, México y toda Latinoamérica.</p>
                   </div>
                 </div>
@@ -281,7 +281,7 @@ document.addEventListener("DOMContentLoaded", function () {
                   </div>
                   <div class="text">
                     <h4>Trabajemos juntos</h4>
-                    <p>Somos un equipo apasionado por la tecnología, con más de 10 años de experiencia en marketing digital e Inteligencia Artificial. Ayudamos a empresas en Latinoamérica a implementar soluciones innovadoras que impulsan su crecimiento y mejoran sus resultados.</p>
+                    <p>Somos un equipo apasionado por la tecnología, con más de 20 años de experiencia en marketing digital e Inteligencia Artificial. Ayudamos a empresas en Latinoamérica a implementar soluciones innovadoras que impulsan su crecimiento y mejoran sus resultados.</p>
                   </div>
                 </div>
               </div>
@@ -331,12 +331,12 @@ document.addEventListener("DOMContentLoaded", function () {
                 </div>
                 <div class="service-content">
                   <span class="service-number">01</span>
-                  <h3 class="service-title">Reducí Costos</h3>
+                  <h3 class="service-title">Reduce Costos</h3>
                   <p class="service-text">Reduce los gastos al dejar que nuestra IA maneje tareas repetitivas, liberando tu presupuesto para inversiones más estratégicas.</p>
                  <a href="https://wa.me/5492635009032" 
                    target="_blank" 
                    class="service-link">
-                  Agendá tu Consultoría
+                  Agenda tu consultoría gratuita
                   <i class="bi bi-arrow-right"></i>
                 </a>
                 </div>
@@ -350,8 +350,8 @@ document.addEventListener("DOMContentLoaded", function () {
                 </div>
                 <div class="service-content">
                   <span class="service-number">02</span>
-                  <h3 class="service-title">Ganá Velocidad</h3>
-                  <p class="service-text">Hacé tus procesos hasta 5 veces más rápidos y optimiza la eficiencia con nuestra ayuda.</p>
+                  <h3 class="service-title">Acelera tus Procesos</h3>
+                  <p class="service-text">Automatiza tus reportes en segundos. Y toma decisiones inteligentes al instante.</p>
                  <a href="https://wa.me/5492635009032" 
                    target="_blank" 
                    class="service-link">
@@ -369,7 +369,7 @@ document.addEventListener("DOMContentLoaded", function () {
                 </div>
                 <div class="service-content">
                   <span class="service-number">03</span>
-                  <h3 class="service-title">Optimizá la Eficiencia</h3>
+                  <h3 class="service-title">Optimiza la Eficiencia</h3>
                   <p class="service-text">Proporciona a tu equipo las herramientas para aumentar su productividad y lograr más, gracias a nuestra tecnología.</p>
                  <a href="https://wa.me/5492635009032" 
                    target="_blank" 
@@ -389,7 +389,7 @@ document.addEventListener("DOMContentLoaded", function () {
                 <div class="service-content">
                   <span class="service-number">04</span>
                   <h3 class="service-title">Mejora la Calidad</h3>
-                  <p class="service-text">Obtené una producción consistente y de calidad al eliminar errores y asegurar resultados precisos y confiables.</p>
+                  <p class="service-text">Obtén una producción consistente y de calidad al eliminar errores y asegurar resultados precisos y confiables.</p>
                   <a href="https://wa.me/5492635009032" 
                    target="_blank" 
                    class="service-link">
@@ -677,7 +677,7 @@ document.addEventListener("DOMContentLoaded", function () {
       <div class="container section-title" data-aos="fade-up">
         <span class="description-title">Portfolio</span>
         <h2>Proyectos</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Exploramos soluciones reales que impulsan negocios, mejoran la comunicación y optimizan procesos.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -689,18 +689,18 @@ document.addEventListener("DOMContentLoaded", function () {
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-card">
                 <div class="image-container">
-                  <img src="assets/img/portfolio/1.jpg" class="img-fluid" alt="Brand Identity" loading="lazy">
+                  <img src="assets/img/portfolio/0.jpg" class="img-fluid" alt="Brand Identity" loading="lazy">
                   <div class="overlay">
                     <div class="overlay-content">
-                     <a href="https://wa.me/5492635009032" class="whatsapp-btn" target="_blank">
-                      Quiero mi bot!
+                     <a href="https://mediacomtoluca.com/" class="whatsapp-btn" target="_blank">
+                      Mediacom
                     </a>
                     </div>
                   </div>
                 </div>
                 <div class="content">
-                  <h3>Agente de Atención al Cliente</h3>
-                  <p>Brindamos soluciones de chatbots que mejoran la experiencia de servicio al cliente, disponibles 24/7. Automatizamos consultas frecuentes para reducir los tiempos de espera.</p>
+                  <h3>Automatización para Agencias Digitales</h3>
+                  <p>Diseñamos chatbots que optimizan la comunicación con clientes y prospectos, agilizando cotizaciones y solicitudes de servicio en tiempo real.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -708,18 +708,18 @@ document.addEventListener("DOMContentLoaded", function () {
            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-card">
                 <div class="image-container">
-                  <img src="assets/img/portfolio/2.jpg" class="img-fluid" alt="Brand Identity" loading="lazy">
+                  <img src="assets/img/portfolio/1.png" class="img-fluid" alt="Brand Identity" loading="lazy">
                   <div class="overlay">
                     <div class="overlay-content">
-                     <a href="https://wa.me/5492635009032" class="whatsapp-btn" target="_blank">
-                      Quiero màs info!
+                     <a href="https://wellnessbooker.com.mx/" class="whatsapp-btn" target="_blank">
+                      Wellnessbooker
                     </a>
                     </div>
                   </div>
                 </div>
                 <div class="content">
-                  <h3>IA Marca Personal en LinkedIn</h3>
-                  <p>Automatizar procesos, identificar nuevos clientes potenciales, incrementar sus reuniones de ventas efectivas y mejorar su tasa de conversión. OBJETIVO: ser más productivo, visible en el mercado y rentable.</p>
+                  <h3>Asistente Virtual para Reservas</h3>
+                  <p>Implementamos un bot inteligente que gestiona citas y consultas de bienestar, ofreciendo atención continua y mejorando la experiencia del usuario.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -727,18 +727,18 @@ document.addEventListener("DOMContentLoaded", function () {
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-card">
                 <div class="image-container">
-                  <img src="assets/img/portfolio/0.jpg" class="img-fluid" alt="Brand Identity" loading="lazy">
+                  <img src="assets/img/portfolio/2.jpg" class="img-fluid" alt="Brand Identity" loading="lazy">
                   <div class="overlay">
                     <div class="overlay-content">
-                     <a href="https://wa.me/5492635009032" class="whatsapp-btn" target="_blank">
-                      Quiero mi bot!
+                     <a href="https://flipinversiones.com/" class="whatsapp-btn" target="_blank">
+                      Flip Inversiones
                     </a>
                     </div>
                   </div>
                 </div>
                 <div class="content">
-                  <h3>Agente con Embudo de Ventas IA</h3>
-                  <p>Convertir visitantes en clientes es todo un desafío. Por eso, en DAIA creamos chatbots de ventas alimentados por IA, diseñados para calificar leads, nutrir prospectos y cerrar más ventas, las 24 horas, los 7 días de la semana.</p>
+                  <h3>Agente Financiero Automatizado</h3>
+                  <p>Creamos un chatbot especializado en asesoría financiera que guía a los usuarios, responde dudas y simplifica la gestión de inversiones al instante.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -802,6 +802,46 @@ document.addEventListener("DOMContentLoaded", function () {
               <div class="member-info">
                 <h4>Daniel Llalen</h4>
                 <span>CEO</span>
+                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+              </div>
+            </div><!-- End Team Member -->
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="team-member">
+              <div class="member-image">
+                <img src="assets/img/person/0.png" class="img-fluid" alt="" loading="lazy">
+                <div class="social-overlay">
+                  <!--<div class="social-icons">
+                    <a href="#"><i class="bi bi-linkedin"></i></a>
+                    <a href="#"><i class="bi bi-twitter-x"></i></a>
+                    <a href="#"><i class="bi bi-instagram"></i></a>
+                  </div>-->
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Elisa Ferreiro</h4>
+                <span>Country Manager México</span>
+                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+              </div>
+            </div><!-- End Team Member -->
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="team-member">
+              <div class="member-image">
+                <img src="assets/img/person/8.png" class="img-fluid" alt="" loading="lazy">
+                <div class="social-overlay">
+                  <!--<div class="social-icons">
+                    <a href="#"><i class="bi bi-linkedin"></i></a>
+                    <a href="#"><i class="bi bi-twitter-x"></i></a>
+                    <a href="#"><i class="bi bi-instagram"></i></a>
+                  </div>-->
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Valeria Martínez</h4>
+                <span>Desarrollo Comercial & Experiencia del Cliente</span>
                 <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
               </div>
             </div><!-- End Team Member -->
