team member added

--- a/index.html
+++ b/index.html
@@ -847,6 +847,26 @@ document.addEventListener("DOMContentLoaded", function () {
             </div><!-- End Team Member -->
           </div>
 
+           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="team-member">
+              <div class="member-image">
+                <img src="assets/img/person/9.png" class="img-fluid" alt="" loading="lazy">
+                <div class="social-overlay">
+                  <!--<div class="social-icons">
+                    <a href="#"><i class="bi bi-linkedin"></i></a>
+                    <a href="#"><i class="bi bi-twitter-x"></i></a>
+                    <a href="#"><i class="bi bi-instagram"></i></a>
+                  </div>-->
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Fabiola Ramírez</h4>
+                <span>Consultora Comercial</span>
+                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+              </div>
+            </div><!-- End Team Member -->
+          </div>
+
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member">
               <div class="member-image">
